# ollama-rust

./: .gitignore  .gitmodules  Cargo.toml  llama-server.sh
examples/: chat-simple.rs  chat.rs  embed-chunked.rs  embed.rs  generate.rs  generate_with_context.rs  list.rs  rerank.rs  simple.rs
examples/common/: mod.rs
src/: lib.rs  llama.rs  model.rs  ollama.rs
src/generation/: generate.rs  mod.rs  parameters.rs  rerank.rs  response.rs
src/generation/chat/: history.rs  message.rs  mod.rs  request.rs  response.rs
src/generation/embed/: mod.rs  request.rs  response.rs
src/generation/generate/: mod.rs  request.rs
src/generation/rerank/: mod.rs  request.rs  response.rs
src/generation/tools/: mod.rs
src/misc/: list_models.rs  mod.rs
