[package]
name = "ollama-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"

[dev-dependencies]
anyhow = "1.0.100"
